force-app/main/default/objects/SBQQ__ImportFormat__c/fields/SBQQ__ImportFormatName__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ImportFormatName__c</fullName>
        <description>A meaningful name that describes the input format.</description>
        <inlineHelpText>Enter a meaningful name that describes the input format.</inlineHelpText>
        <label>Import Format Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>