force-app/main/default/objects/SBQQ__ImportFormat__c/fields/SBQQ__TargetObject__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TargetObject__c</fullName>
        <description>Target Object to be imported.</description>
        <inlineHelpText>Target Object to be imported.</inlineHelpText>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote Line</fullName>
                    <default>true</default>
                    <label>Quote Line</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>