force-app/main/default/objects/SBQQ__ImportFormat__c/fields/SBQQ__UniqueKeyCount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__UniqueKeyCount__c</fullName>
        <description>A count of the unique Keys within the Import Format.</description>
        <inlineHelpText>A count of the unique Keys within the Import Format.</inlineHelpText>
        <label># Unique Key</label>
        <summaryFilterItems>
            <field>SBQQ__ImportColumn__c.SBQQ__Key__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__ImportColumn__c.SBQQ__ImportFormat__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </CustomField>