force-app/main/default/objects/SBQQ__ImportFormat__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__ImportFormatName__c</columns>
        <columns>SBQQ__TargetObject__c</columns>
        <columns>SBQQ__UniqueKeyCount__c</columns>
        <columns>SBQQ__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>